@@ -1,3 +1,8 @@
+2013-04-24  Muhammad Bilal  <mbilal@codesourcery.com>
+
+	PR gdb/10462
+	* gdb.base/setshow.exp: Add test case.
+
 2013-04-23  Hui Zhu  <hui@codesourcery.com>
 
 	PR gdb/15293
